Lưu các thay đổi cục bộ trước khi pull